Temporarily resolved overflow issue.

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
+    overflow-x: hidden; /* Added to fix the phantom overflow */
 }
 
 button {
